:lipstick: [open-formulieren/open-forms#2907] Avoid clipping title with ellipsis

--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -9,7 +9,7 @@
 @import '../mixins/prefix';
 
 .#{prefix(title)} {
-  @include ellipsis;
+  word-break: break-all;
 }
 
 .#{prefix(subtitle)} {
